--- a/pc/comp.html
+++ b/pc/comp.html
@@ -21,10 +21,6 @@
       <img src="../media/pcfon.png" alt="map" class="blur-border">
       <div class="ekran" id="ekran"></div>
 
-
-
-
-
           <div class="contend">
               <div class="panel" role="tablist" aria-label="Меню модулів">
                 <button class="tab-btn selected" data-target="shop" role="tab" aria-selected="true">Магазин</button>
@@ -114,7 +110,7 @@
                             <img src="../media/monster-ultra-zero.jpg"/> <p>Монстр Ультра Вайт</p>
                           </div>
                         <div class="polosa"></div>
-                        <p>Не самый крутой монстр, но для колекции самый раз (им легко закадрить поселение мармиладных свиней)</p>
+                        <p>Монстряка для колекции, им легко закадрить поселение мармиладных свиней</p>
  
                         <p class="cena" id="cena3">100 баребухав</p> <button id="buyBtn3">Преобрести</button>
                       </div>
@@ -126,7 +122,7 @@
                             <img src="../media/mangoloco.jpg"/> <p class="b">Монстряка манго локо</p>
                           </div>
                         <div class="polosa"></div>
-                        <p>Хороший монстряка, им можно попытаться поймать стримера в клетку, но сработает не всегда</p>
+                        <p>Хороший монстряка, им можно попытаться поймать стримера в подсобку, но сработает не всегда</p>
  
                         <p class="cena" id="cena4">120 баребухав</p> <button id="buyBtn4">Преобрести</button>
                       </div>
@@ -148,7 +144,7 @@
                             <img src="../media/scrap.png"/> <p>Детали для трактора</p>
                           </div>
                         <div class="polosa"></div>
-                        <p>Понятия не имею зачем они тебе, но кажеться они важны</p>
+                        <p>Понятия не имею зачем они тебе, но кажеться они нужны</p>
  
                         <p class="cena" id="cena6">10 баребухав</p> <button id="buyBtn6">Преобрести</button>
                       </div>
@@ -158,7 +154,7 @@
                             <img src="../media/monster-ultra-rosa.png"/> <p>Монстр ультра роза</p>
                           </div>
                         <div class="polosa"></div>
-                        <p>Любимый монстряка програмистов (возможно), а по факту это просто доп. товар в информации которого есть донатные сылки и номера (Стримера и автора) </p>
+                        <p>Любимый монстряка програмистов (возможно), а по факту это товар с информацией для доната.</p>
  
                         <p class="cena" id="cena7">20 баребухав</p> <button id="buyBtn7">Преобрести</button>
                       </div>
@@ -168,7 +164,7 @@
                             <img src="../media/kaseta.png"/> <p>Касета</p>
                           </div>
                         <div class="polosa"></div>
-                        <p>Касета маша и медведь, интересно что она делала в родительской комнате на верхнем ящеке шкафа.../p>
+                        <p>Касета маша и медведь, интересно что она делала в родительской комнате на верхнем ящеке шкафа...</p>
  
                         <p class="cena" id="cena8">50 баребухав</p> <button id="buyBtn8">Преобрести</button>
                       </div>
@@ -251,7 +247,7 @@
                           </div>
                         <div class="polosa"></div>
                         
-                          <img src=""/>
+                          <img src="../media/tortzlo.png"/>
  
                         <p class="cena" id="koll_2">В мешочке: 0 шт.</p>    <button id="sellBtn2">Продать</button>
                       </div>
@@ -323,13 +319,7 @@
                             <img src="../media/monster-ultra-rosa.png"/> <p> Хули ты тут ищещ? меня хочешь?</p>
                           </div>
                         <div class="polosa"></div>
-                        
-                        <p>Донаты Дейману - </p>
-                        <a href="https://www.donationalerts.com/r/daymonmontage"> Нажми на текст</a>
-                        <p> а также банковские данные можно узнать на твиче Деймана - </p> 
-                        <a href="https://www.twitch.tv/daymonmontage/about"> Нажми на текст</a>
-
-                        <p><br> А поддержать автора можно по этим сылкам/картам:</p> 
+                        <p>Поддержать автора можно по сылке снизу (моно банка), а также на карту:</p> 
                         <a href="https://send.monobank.ua/jar/2uxU27V5pX"> нажми на текст</a>
                         <p> 4874070050177300 <br> 4874100084337123</p>
 
