--- a/index.html
+++ b/index.html
@@ -34,21 +34,11 @@
 <div id="modal" class="modal">
   <div class="modal-content">
     <button id="closeModal">Закрыть окно</button>
-    <p>Дарова читатель, это блок информации и сейчас я чутка розкажу что это вообще за сайт, зачем а главное нахуя<br>
-    <br>
-    Начну я с того что эта мини-игра не создавалась с целью сделать всё идеально, со своим лором или тп, она создавалась чисто что б поиграть пару минут, поймать хихи и всё.<br>
-    <br>
-    Что есть на сайте -<br>
-    -Главная страница с картой<br>
-    -Страница с сервером<br>
-    -Страница с пк у которого есть:<br>
-    »Магазин (Для закрывания товара - даблкилк за панелью)<br>
-    »Инвентарь<br>
-    »Ачивки<br>
-    »Консоль<br>
-    <br>
-    Из всего этого выделяеться лишь консоль, у неё тоже есть свои фишки но основная её функция - помощ в розработке.<br>
-  </p>
+<p>Добро пожаловать в информационный блок!<br>
+Этот сайт — мини-игра, которую я создавал с учётом связи с сообществом стримера Daymonage. Здесь есть отсылки, пасхалки и локальные мемы, которые могут быть вам знакомы.<br><br>
+Суть мини-игры: есть две игры — одна на сервере, вторую вы найдёте в консоли на ПК. В них вы зарабатываете местную валюту, за которую в магазине можно купить различную «дичь» и посмотреть, что скрывается внутри.<br><br>
+Если возникают какие-то проблемы или вы находите баг, который явно мешает, вы также можете обратиться ко мне через команду в консоли.<br><br> Подсказка - что б покинуть меню информации товара, нажмите за меню в зону монитора</p>
+
     
   </div>
 </div>
