--- a/gecktuss_game/game.html
+++ b/gecktuss_game/game.html
@@ -5,6 +5,7 @@
     <title>MemServerToDaymonage</title>
 
 <script src="./script.js" defer> </script>
+<script src="../pc/achievement.js" defer> </script>
 <script type="module">
   import { getMoney, onMoneyChange } from '../money.js'; // <- поправ шлях тут
 
@@ -39,6 +40,7 @@
 <span class="money">Баребухи: <p id="money" style="display:inline-block">0</p></span>
 
 
+<div id="krev2"> <img src="../media/kervetko.png"/></div>
 
 <div class="block" id="gameArea">
         <div class="bl">
@@ -58,8 +60,8 @@
 <audio id="sound1Src" src="../media/sercebienie-7.mp3" preload="auto"></audio>
 <audio id="sound2Src" src="../media/sercebienie-6.mp3" preload="auto"></audio>
 
+
+
 </body>
 
 </html>
-
-<script src=""></script>
