--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MemServerToDaymonage</title>
 
 <script src="./script.js" defer> </script>
+<script src="./pc/achievement.js" defer> </script>
 
     <link rel="icon" href="./media/photo_2025-11-01_23-38-02.jpg">
     <link rel="stylesheet" href="./style.css">
@@ -48,6 +49,8 @@
 
 
 </body>
+
+<div id="krev3"> <img src="../media/kervetko.png"/></div>
 
 <script type="module">
   import { getMoney, onMoneyChange } from '../money.js'; // <- поправ шлях тут
