--- a/ser/server.html
+++ b/ser/server.html
@@ -5,6 +5,7 @@
     <title>MemServerToDaymonage</title>
 
 <script src="./script.js" defer> </script>
+<script src="../pc/achievement.js" defer> </script>
 
     <link rel="icon" href="../media/photo_2025-11-01_23-38-02.jpg">
     <link rel="stylesheet" href="./style.css">
@@ -12,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
 </head>
 <body>
+
+  <div id="krev4"> <img src="../media/kervetko.png"/></div>
 
      <span class="money">Баребухи: <p id="money" style="display:inline-block">0</p></span>
 
